<resources>
    <string name="app_name">Material Files</string>
    <string name="close">Close</string>
    <string name="copy">Copy</string>
    <string name="details">Details</string>
    <string name="cut">Cut</string>
    <string name="default_">Default</string>
    <string name="delete">Delete</string>
    <string name="discard">Discard</string>
    <string name="edit">Edit</string>
    <string name="empty">Empty</string>
    <string name="empty_placeholder">(Empty)</string>
    <string name="error">Error</string>
    <string name="hide">Hide</string>
    <string name="install">Install</string>
    <string name="keep_editing">Keep editing</string>
    <string name="loading">Loading…</string>
    <string name="maybe_later">Maybe later</string>
    <string name="merge">Merge</string>
    <string name="none">None</string>
    <string name="open_navigation_drawer">Open navigation drawer</string>
    <string name="paste">Paste</string>
    <string name="pick" translatable="false">@string/select</string>
    <string name="refresh">Refresh</string>
    <string name="reload">Reload</string>
    <string name="remove">Remove</string>
    <string name="rename">Rename</string>
    <string name="replace">Replace</string>
    <string name="reset">Reset</string>
    <string name="retry">Retry</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="select">Select</string>
    <string name="select_all">Select all</string>
    <string name="share">Share</string>
    <string name="show">Show</string>
    <string name="skip">Skip</string>
    <string name="sort">Sort</string>
    <string name="stop">Stop</string>
    <string name="unknown">Unknown</string>
    <string name="view">View</string>
    <string name="collect">Collect</string>
    <string name="cancel_collect">Cancel Collect</string>
    <string name="add_file">Add file</string>
    <string name="layout_change">Layout Change</string>
    <string name="repeat_title" translatable="false">\u0020(%d)</string>
    <string name="modify"><u>modify</u></string>
    <string name="storage_location">Storage Location：%s</string>
    <string name="more">More</string>
    <string name="activity_not_found">No application found to handle this action</string>
    <string name="copied_to_clipboard_format" translatable="false">@string/preference_copied</string>
    <string name="open_settings">Open settings</string>
    <string name="shortcut_created">Shortcut created</string>
    <plurals name="size_in_bytes_format">
        <item quantity="one">%1$,d byte</item>
        <item quantity="other">%1$,d bytes</item>
    </plurals>
    <string name="storage_permission_rationale_message">App needs permission to access files. Please click “ALLOW” in the upcoming system dialog.</string>
    <string name="storage_permission_permanently_denied_message">App needs permission to access files. Please grant the “Storage” permission in system settings.</string>
    <string name="all_files_access_rationale_message">App needs access to manage all files. Please allow the access in the upcoming system setting.</string>
    <string name="notification_channel_background_activity_start_name">Actions while background</string>
    <string name="notification_channel_background_activity_start_description">Take actions while app is in the background</string>
    <string name="notification_channel_file_job_name">File operations</string>
    <string name="notification_channel_file_job_description">Display and control file operations</string>
    <string name="notification_channel_ftp_server_name">FTP server</string>
    <string name="notification_channel_ftp_server_description">Display and control the FTP server</string>
    <plurals name="file_job_archive_scan_notification_title_format">
        <item quantity="one">Preparing to compress %1$,d file (%2$s)</item>
        <item quantity="other">Preparing to compress %1$,d files (%2$s)</item>
    </plurals>
    <string name="file_job_archive_notification_title_one_format">Compressing “%1$s” into “%2$s”</string>
    <plurals name="file_job_archive_notification_title_multiple_format">
        <item quantity="one">Compressing %1$,d file into “%2$s”</item>
        <item quantity="other">Compressing %1$,d files into “%2$s”</item>
    </plurals>
    <plurals name="file_job_copy_scan_notification_title_format">
        <item quantity="one">Preparing to copy %1$,d file (%2$s)</item>
        <item quantity="other">Preparing to copy %1$,d files (%2$s)</item>
    </plurals>
    <string name="file_job_copy_notification_title_one_format">Copying “%1$s” to “%2$s”</string>
    <plurals name="file_job_copy_notification_title_multiple_format">
        <item quantity="one">Copying %1$,d file to “%2$s”</item>
        <item quantity="other">Copying %1$,d files to “%2$s”</item>
    </plurals>
    <plurals name="file_job_extract_scan_notification_title_format">
        <item quantity="one">Preparing to extract %1$,d file (%2$s)</item>
        <item quantity="other">Preparing to extract %1$,d files (%2$s)</item>
    </plurals>
    <string name="file_job_extract_notification_title_one_format">Extracting “%1$s” to “%2$s”</string>
    <plurals name="file_job_extract_notification_title_multiple_format">
        <item quantity="one">Extracting %1$,d file to “%2$s”</item>
        <item quantity="other">Extracting %1$,d files to “%2$s”</item>
    </plurals>
    <plurals name="file_job_move_scan_notification_title_format">
        <item quantity="one">Preparing to move %1$,d file (%2$s)</item>
        <item quantity="other">Preparing to move %1$,d files (%2$s)</item>
    </plurals>
    <string name="file_job_move_notification_title_one_format">Moving “%1$s” to “%2$s”</string>
    <plurals name="file_job_move_notification_title_multiple_format">
        <item quantity="one">Moving %1$,d file to “%2$s”</item>
        <item quantity="other">Moving %1$,d files to “%2$s”</item>
    </plurals>
    <string name="file_job_transfer_size_notification_text_one_format">%1$s / %2$s</string>
    <string name="file_job_transfer_size_notification_text_multiple_format">%1$,d / %2$,d</string>
    <plurals name="file_job_delete_scan_notification_title_format">
        <item quantity="one">Preparing to delete %1$,d file</item>
        <item quantity="other">Preparing to delete %1$,d files</item>
    </plurals>
    <string name="file_job_delete_notification_title_one_format">Deleting “%1$s”</string>
    <plurals name="file_job_delete_notification_title_multiple_format">
        <item quantity="one">Deleting %1$,d file</item>
        <item quantity="other">Deleting %1$,d files</item>
    </plurals>
    <plurals name="file_job_set_owner_scan_notification_title_format">
        <item quantity="one">Preparing to change owner for %1$,d file</item>
        <item quantity="other">Preparing to change owner for %1$,d files</item>
    </plurals>
    <string name="file_job_set_owner_notification_title_one_format">Changing owner for “%1$s”</string>
    <plurals name="file_job_set_owner_notification_title_multiple_format">
        <item quantity="one">Changing owner for %1$,d file</item>
        <item quantity="other">Changing owner for %1$,d files</item>
    </plurals>
    <plurals name="file_job_set_group_scan_notification_title_format">
        <item quantity="one">Preparing to change group for %1$,d file</item>
        <item quantity="other">Preparing to change group for %1$,d files</item>
    </plurals>
    <string name="file_job_set_group_notification_title_one_format">Changing group for “%1$s”</string>
    <plurals name="file_job_set_group_notification_title_multiple_format">
        <item quantity="one">Changing group for %1$,d file</item>
        <item quantity="other">Changing group for %1$,d files</item>
    </plurals>
    <plurals name="file_job_set_mode_scan_notification_title_format">
        <item quantity="one">Preparing to change mode for %1$,d file</item>
        <item quantity="other">Preparing to change mode for %1$,d files</item>
    </plurals>
    <string name="file_job_set_mode_notification_title_one_format">Changing mode for “%1$s”</string>
    <plurals name="file_job_set_mode_notification_title_multiple_format">
        <item quantity="one">Changing mode for %1$,d file</item>
        <item quantity="other">Changing mode for %1$,d files</item>
    </plurals>
    <plurals name="file_job_set_selinux_context_scan_notification_title_format">
        <item quantity="one">Preparing to change SELinux context for %1$,d file</item>
        <item quantity="other">Preparing to change SELinux context for %1$,d files</item>
    </plurals>
    <string name="file_job_set_selinux_context_notification_title_one_format">Changing SELinux context for “%1$s”</string>
    <plurals name="file_job_set_selinux_context_notification_title_multiple_format">
        <item quantity="one">Changing SELinux context for %1$,d file</item>
        <item quantity="other">Changing SELinux context for %1$,d files</item>
    </plurals>
    <plurals name="file_job_restore_selinux_context_scan_notification_title_format">
        <item quantity="one">Preparing to restore SELinux context for %1$,d file</item>
        <item quantity="other">Preparing to restore SELinux context for %1$,d files</item>
    </plurals>
    <string name="file_job_restore_selinux_context_notification_title_one_format">Restoring SELinux context for “%1$s”</string>
    <plurals name="file_job_restore_selinux_context_notification_title_multiple_format">
        <item quantity="one">Restoring SELinux context for %1$,d file</item>
        <item quantity="other">Restoring SELinux context for %1$,d files</item>
    </plurals>
    <string name="file_job_transfer_count_notification_text_multiple_format">%1$,d / %2$,d</string>
    <string name="file_job_write_notification_title_format">Writing “%1$s”</string>
    <string name="file_job_create_error_title">Error while creating</string>
    <string name="file_job_create_error_message_format">There was an error creating “%1$s”.\n%2$s</string>
    <string name="file_job_cannot_copy_into_itself_title">Cannot copy a folder into itself</string>
    <string name="file_job_cannot_extract_into_itself_title">Cannot extract a folder into itself</string>
    <string name="file_job_cannot_move_into_itself_title">Cannot move a folder into itself</string>
    <string name="file_job_cannot_copy_move_into_itself_message">The destination folder is inside the source folder.</string>
    <string name="file_job_cannot_copy_over_itself_title">Cannot copy a file over itself</string>
    <string name="file_job_cannot_extract_over_itself_title">Cannot extract a file over itself</string>
    <string name="file_job_cannot_move_over_itself_title">Cannot move a file over itself</string>
    <string name="file_job_cannot_copy_move_over_itself_message">The source file would be overwritten by the destination.</string>
    <string name="file_job_replace_title_format">Replace file “%1$s”?</string>
    <string name="file_job_replace_message_format">Another file with the same name already exists in “%1$s”.\nReplacing it will overwrite its content.</string>
    <string name="file_job_replace_target_name">Original file</string>
    <string name="file_job_replace_source_name">Replace with</string>
    <string name="file_job_merge_title_format">Merge folder “%1$s”?</string>
    <string name="file_unzip_display_title">展示位置</string>
    <string name="file_properties_permissions_owner">Owner</string>
    <string name="file_properties_permissions_group">Group</string>
    <string name="file_properties_permissions_set_mode_others">Others</string>
    <string name="file_properties_permissions_set_mode_special">Special</string>
    <string name="file_properties_permissions_set_mode_uppercase_x">Don’t add “Execute” for enclosed files</string>
    <string name="file_properties_permissions_recursive">Apply to enclosed files</string>
</resources>