<?xml version="1.0" encoding="utf-8"?>



<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/action_select_all"
        android:icon="@drawable/unselect_all_file_icon"
        android:orderInCategory="100"
        android:title="@string/select_all"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/delete_icon"
        android:orderInCategory="100"
        android:title="@string/delete"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/share_icon"
        android:orderInCategory="100"
        android:title="@string/share"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_cut"
        android:icon="@drawable/move_file_icon"
        android:orderInCategory="100"
        android:title="@string/cut"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_more"
        android:icon="@drawable/more_icon"
        android:orderInCategory="100"
        android:title="@string/more"
        app:showAsAction="always">
    </item>
</menu>
